# intro-cd

./: .gitignore  README.md  requirements.txt
Tarea_1/: 2026_tarea1.ipynb  2026_template_tarea1.ipynb  build_chart_2a.py  pyproject.toml
Tarea_1/informe/: main.tex
Tarea_1/slides/: slides.tex
Tarea_2/: 2026_tarea2.ipynb  2026_template_tarea2.ipynb
Tarea_2/informe/: main.tex
